fix: align numbers on the code details table to the left

--- a/src/renderer/components/detailed-view-components/DetailedView.scss
+++ b/src/renderer/components/detailed-view-components/DetailedView.scss
@@ -266,14 +266,6 @@
             position: sticky;
             background-color: $tt-background;
         }
-
-        .format-numbers {
-            text-align: right;
-
-            &.keep-left {
-                text-align: left;
-            }
-        }
     }
 
     .memory-color-block {
